--- a/Website/index.html
+++ b/Website/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+<link rel="stylesheet" href="" type="text/css" />
 <html>
     <head>
     </head>
     <body>
        <h1> Cup of Tea</h1>
        <p> have a cup of tea.</p>
-      <img src="/56155598_p0.jpg"></img>
+      <img src="56155598_p0.jpg"></img>
     </body>
 </html>
