--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </ul>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <section2> 
-<title><font color="white">"Have Some Tea" by Gbogi</font></title>
+<title> "Have Some Tea" by Gbogi </title>
 </section2>
     
     
